unpackaged/main/default/objects/CMPL123QMS__Change_Control_Item__c/CMPL123QMS__Change_Control_Item__c.object-meta.xml
<CustomObject>
    <label>Change Control Item</label>
    <nameField>
        <displayFormat>CC-Item-{00000}</displayFormat>
        <label>Change Control Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Control Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>