unpackaged/main/default/objects/CMPL123QMS__Change_Control_Item__c/fields/CMPL123QMS__Disposal_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Disposal_Value__c</fullName>
        <label>Disposal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>