unpackaged/main/default/objects/CMPL123QMS__Change_Control_Item__c/fields/CMPL123QMS__New_Version__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__New_Version__c</fullName>
        <label>New Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>