unpackaged/main/default/objects/CMPL123QMS__Change_Control_Item__c/fields/CMPL123QMS__Part_Disposition__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Part_Disposition__c</fullName>
        <label>Part Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Use Existing</fullName>
                </value>
                <value>
                    <fullName>2 - Rework</fullName>
                </value>
                <value>
                    <fullName>3 - Scrap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>