unpackaged/main/default/objects/CMPL123QMS__Change_Control_Item__c/fields/CMPL123QMS__Part_Information__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Part_Information__c</fullName>
        <label>Part Information</label>
        <referenceTo>CMPL123QMS__Part_Information__c</referenceTo>
        <relationshipLabel>Change Control Items</relationshipLabel>
        <relationshipName>Change_Control_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>