unpackaged/main/default/objects/CMPL123QMS__Change_Control_Item__c/fields/CMPL123QMS__Quantity__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>