unpackaged/main/default/objects/CMPL123QMS__Change_Control_Item__c/fields/CMPL123QMS__Statuses__c.field-meta.xml
<CustomField>
        <fullName>CMPL123QMS__Statuses__c</fullName>
        <label>Statuses</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Order</fullName>
                </value>
                <value>
                    <fullName>QC Hold</fullName>
                </value>
                <value>
                    <fullName>In Stock</fullName>
                </value>
                <value>
                    <fullName>WIP</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>